manifests/app.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: quarkus-api-example
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: quarkus-api-example
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: quarkus-api-example
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: quarkus-api-example
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: quarkus-api-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: quarkus-api-example
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.quarkus.io/build-timestamp: 2022-08-23 - 19:43:05 +0000
      labels:
        app.kubernetes.io/name: quarkus-api-example
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: image-registry.openshift-image-registry.svc:5000/openshift/quarkus-api-example
          imagePullPolicy: Always
          name: quarkus-api-example
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
      serviceAccountName: quarkus-api-example
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: postgresql
  labels:
    app: postgresql
    app.kubernetes.io/component: postgresql
    app.kubernetes.io/instance: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: postgresql
  template:
    metadata:
      creationTimestamp: null
      labels:
        deployment: postgresql
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
    spec:
      containers:
        - name: postgresql
          image: quay.io/centos7/postgresql-13-centos7@sha256:994f5c622e2913bda1c4a7fa3b0c7e7f75e7caa3ac66ff1ed70ccfe65c40dd75
          ports:
            - containerPort: 5432
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
kind: Service
apiVersion: v1
metadata:
  name: postgresql
  labels:
    app: postgresql
    app.kubernetes.io/component: postgresql
    app.kubernetes.io/instance: postgresql
spec:
  ports:
    - name: 5432-tcp
      protocol: TCP
      port: 5432
      targetPort: 5432
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    deployment: postgresql
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: quarkus-api
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: quarkus-api
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: quarkus-api-example
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: quarkus-api
  name: quarkus-api
spec:
  path: /food
  port:
    targetPort: http
  to:
    kind: Service
    name: quarkus-api
    weight: 100
